News UAT/force-app/main/default/objects/Decision_Log__c/Decision_Log__c.object-meta.xml
<CustomObject>
    <label>Decision Log</label>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Decision #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Decision Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>