News UAT/force-app/main/default/objects/Decision_Log__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <label>Decision Subject</label>
    <length>125</length>
    <type>Text</type>
</CustomField>