News UAT/force-app/main/default/objects/Decision_Log__c/fields/Expected_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Closed_Date__c</fullName>
    <label>Expected Closed Date</label>
    <type>Date</type>
</CustomField>