News UAT/force-app/main/default/objects/Decision_Log__c/fields/Project_Overview__c.field-meta.xml
<CustomField>
    <fullName>Project_Overview__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Overview</label>
    <referenceTo>Project_Overview__c</referenceTo>
    <relationshipLabel>Decision Log</relationshipLabel>
    <relationshipName>Decision_Log</relationshipName>
    <type>Lookup</type>
</CustomField>