News UAT/force-app/main/default/objects/Decision_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1) New</fullName>
                <default>true</default>
                <label>1) New</label>
            </value>
            <value>
                <fullName>2) Escalate to PCG</fullName>
            </value>
            <value>
                <fullName>3) Escalate to AST</fullName>
            </value>
            <value>
                <fullName>4) Closed - Project Leadership</fullName>
            </value>
            <value>
                <fullName>5) Closed - PST</fullName>
            </value>
            <value>
                <fullName>6) Closed - AST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>