News UAT/force-app/main/default/objects/Decision_Log__c/validationRules/Decision_Comments.validationRule-meta.xml
<ValidationRule>
    <fullName>Decision_Comments</fullName>
    <active>true</active>
    <description>When a decision log is &quot;Closed&quot; a &quot;Decision Comment&quot; is required</description>
    <errorConditionFormula>OR( ISPICKVAL( Status__c , &quot;4) Closed - Project Leadership&quot; ), ISPICKVAL( Status__c , &quot;4) Closed - PST&quot; ), ISPICKVAL( Status__c , &quot;4) Closed - ACT&quot; )) &amp;&amp;  ISBLANK( Decision_Comments__c )</errorConditionFormula>
    <errorDisplayField>Decision_Comments__c</errorDisplayField>
    <errorMessage>Please enter Decision Comments</errorMessage>
</ValidationRule>